# industrial-robot-arm-ros2

./: .gitignore  .pre-commit-config.yaml  README.md  requirements-dev.txt  requirements.txt
irb_action_manager/: package.xml  setup.cfg  setup.py
irb_action_manager/config/: moveit.rviz  planning_api.yaml  screw_poses.json
irb_action_manager/irb_action_manager/: change_tool_action_server.py  detect_screws_action_server.py  moveit_action_server.py  unscrew_action_server.py
irb_action_manager/launch/: action_servers.launch.py  robot.launch.py  start_scene.launch.py
irb_bringup/: package.xml  setup.cfg  setup.py
irb_bringup/launch/: bringup.launch.py
irb_description/: CMakeLists.txt  package.xml
irb_description/urdf/: robot_w_screwdriver.urdf  yourdfpy_robot_w_screwdriver.urdf
irb_interfaces/: CMakeLists.txt  package.xml
irb_interfaces/action/: ChangeTool.action  DetectScrews.action  DropScrew.action  GoTo.action  Unscrew.action
irb_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
irb_moveit_config/config/: initial_positions.yaml  irb6640_205.ros2_control .hw.xacro  irb6640_205.ros2_control.xacro  irb6640_205.srdf  irb6640_205.urdf.xacro  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
irb_moveit_config/launch/: demo.launch.py  rsp.launch.py  (+6 more)
irb_task_planner/: package.xml  setup.cfg  setup.py
irb_task_planner/irb_task_planner/: problem.py  unscrew_task.py
irb_task_planner/irb_task_planner/action_clients/: __init__.py  change_tool.py  detect_screw.py  drop_screw.py  goto.py  unscrew.py
scripts/: unscrew_task_planning.py
