<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irb_task_planner</name>
  <version>0.1.0</version>
  <description>Task Planning for IRB</description>
  <maintainer email="franklinselva10@gmail.com">franklinselva</maintainer>
  <license>TODO: License declaration</license>

  <depend>irb_action_manager</depend>
  <depend>irb_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
